sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var i : Int;
      ^AlgInsertionSort:4: error: local variables must be initialized
  var i : Int;
      ^AlgInsertionSort:5: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var j : Int;
      ^AlgInsertionSort:5: error: local variables must be initialized
  var j : Int;
      ^AlgInsertionSort:6: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var v : Int;
      ^AlgInsertionSort:6: error: local variables must be initialized
  var v : Int;
      ^