sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var length : Int = getValueCount();
  var i : Int;
  var j : Int;
  var v : Int;
  
  for(i<-1 to length-1)
  {
    v = getValue(i);
    j=i;
    for(j<-i to i by -1)
    {
      if(isSmallerThan(i-1,v))
      {
        setValue(i,v);
      }
    }
  }
}